// Channel-specific functionality for the Tardigrade runtime.

syntax = "proto3";

package tardigrade;

import "google/protobuf/empty.proto";
import "tardigrade/types.proto";

service TardigradeChannels {
  // Creates a new channel.
  rpc CreateChannel(CreateChannelRequest) returns (Channel) {}
  // Gets information about the channel with the specified ID.
  rpc GetChannel(GetChannelRequest) returns (Channel) {}
  // Closes the channel with the specified ID.
  rpc CloseChannel(CloseChannelRequest) returns (Channel) {}
  // TODO: truncate channel

  // Gets a specific message from the specified channel.
  rpc GetMessage(MessageRef) returns (Message) {}
  // Streams messages from the specified channel.
  rpc StreamMessages(StreamMessagesRequest) returns (stream Message) {}
  // Push one or more messages to the specified channel.
  rpc PushMessages(PushMessagesRequest) returns (google.protobuf.Empty) {}
}

// Request to create a new channel.
message CreateChannelRequest {
  // No fields yet.
}

// Request to get information about a channel.
message GetChannelRequest {
  // Channel ID to retrieve.
  uint64 id = 1;
}

// Request to close a channel.
message CloseChannelRequest {
  // Channel ID to close.
  uint64 id = 1;
  // Which half of the channel to close?
  HandleType half = 2;
}

// Message stored in a channel.
message Message {
  // Message coordinates: the ID of the owning channel, and the message index.
  MessageRef reference = 1;
  // Message payload.
  bytes payload = 2;
}

// Request to stream messages from a channel.
message StreamMessagesRequest {
  // Channel ID to stream from.
  uint64 id = 1;
  // 0-based starting index for the streamed messages.
  uint64 start_index = 2;
}

// Request to push messages to a channel.
message PushMessagesRequest {
  // Channel ID to push the message into.
  uint64 channel_id = 1;
  // Message payloads.
  repeated bytes payloads = 2;
}
